# Nuitka-Wheel

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.bat  buildpyi.bat  importtesting.py  pyproject.toml  requirements.txt
src/smaths/: __init__.py  __init__.pyi  simplemaths.py
src/smaths.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/smaths/utils/: speaker.py  speaker.pyi
tests/: wheelimporttest.py
