[project]
name = "smaths"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Charlie-Warren", email = "c_warren1@live.com" }
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[build-system]
requires = ["setuptools>=49.0", "wheel", "nuitka>=2.1.0", "toml"]
build-backend = "nuitka.distutils.Build"

[nuitka]
no-pyi-file = true

[tools.setuptools]
include-package-data = true

[tools.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
smaths = ["*.pyi", "**/*.pyi"]

[dependency-groups]
dev = [
    "mypy>=1.6.1",
    "nuitka>=2.1.0",
    "pytest",
]
